Added checks for null to handle the case where a Mac-specific theme with native scrollbars is applied to a non-Mac platform, which was crashing us. b=138720 sr=kin r=kmcclusk